[package]
name = "rspong"
version = "0.1.0"
authors = ["oyvindln <mail@example.com>"]

[[bin]]
name = "rspong"

[dependencies]
piston = "0.17.0"
piston_window = "0.34.0"
piston2d-graphics = "0.13.1"
pistoncore-glutin_window = "0.20.0"
piston2d-opengl_graphics = "0.23.0"
rand = "0.3"
# gfx_text = "0.8.0"
